# ansible-playbooks

./: LICENSE  Makefile.am  README.md  build.sh  configure.ac.in  package.spec.in  pkginfo.sh
examples/: hosts  libvirt-host-playbook.yml
examples/git-server/: group_vars  roles  run.sh  site.yml
examples/libvirt-guests/: ansible.cfg  site.retry  site.yml
examples/libvirt-host/: hosts  site.yml
examples/libvirt-host/group_vars/: libvirt-hosts.yml
examples/repos-server/: run.sh  site.yml
examples/repos-server/group_vars/: libvirt-hosts.yml
examples/rhui-install/: site.yml
examples/setup-yum-repos/: run.sh  site.yml
examples/setup-yum-repos/group_vars/: libvirt-hosts.yml
examples/yum-repo-server/: build  hosts  site.yml
libvirt-host/defaults/: main.yml
libvirt-host/tasks/: install.yml
libvirt-host/tests/: test.yml
libvirt-host/vars/: main.yml
libvirt-self-resolv/: README.md  hosts  site.yml
roles/custom-rhel-iso/: site.yml
roles/custom-rhel-iso/defaults/: main.yml
roles/custom-rhel-iso/tasks/: main.yml  mkiso.yml  write_to_disk.yml
roles/custom-rhel-iso/templates/: ks.cfg.j2
roles/git-server/defaults/: main.yml
roles/git-server/tasks/: install.yml  repos.yml
roles/kvm/: README.rst
roles/kvm/defaults/: main.yml
roles/kvm/tasks/: install.yml
roles/kvm/tests/: run.sh
roles/libvirt-guests/defaults/: main.yml
roles/libvirt-guests/handlers/: main.yml
roles/libvirt-guests/tasks/: _create_guest.yml  guests.yml  install.yml  main.yml
roles/libvirt-guests/templates/: build_libvirt_guest.sh.j2  rhel-7-web-ks.cfg.j2
roles/libvirt-host/defaults/: main.yml
roles/libvirt-host/handlers/: main.yml
roles/libvirt-host/tasks/: _create_guest.yml  _create_network.yml  _network.yml  _network_extras.yml  _start_network.yml  dns.yml  guests.yml  install.yml  kvm.yml  main.yml  networks.yml
roles/libvirt-host/templates/: libvirt-network.xml.j2  resolv.conf.static.j2  rhel-7-web-ks.cfg.j2  rosolv.conf.static.j2  vmbuild.sh.j2
roles/repos-server/defaults/: main.yml
roles/repos-server/handlers/: main.yml
roles/repos-server/tasks/: _setup_repo.yml  install.yml  repos.yml
roles/repos-server/templates/: yum.repo.j2
roles/rhui-install/: README.md
roles/rhui-install/defaults/: main.yml
roles/rhui-install/tasks/: install.yml  main.yml  prechecks.yml  prep.yml
roles/rhui-install/templates/: yum_repo_file.j2
roles/rhui-install/vars/: main.yml
roles/rhui-setup/defaults/: main.yml
roles/setup-yum-repo/: README
roles/setup-yum-repo/defaults/: .main.yml.swp  main.yml
roles/setup-yum-repo/tasks/: _setup_repo.yml  _setup_repo_by_createrepo.yml  _setup_repo_with_iso_image.yml  install.yml
roles/setup-yum-repo/templates/: yum.repo.j2
roles/setup-yum-repos/defaults/: main.yml
roles/setup-yum-repos/tasks/: _create_repo_file.yml  _setup_repo.yml  _setup_repo_by_createrepo.yml  _setup_repo_by_reposync.yml  _setup_repo_with_iso_image.yml  main.yml
roles/yum-repo-server/defaults/: main.yml
satellite-6/: hosts
satellite-6/group_vars/: all  capsule  satellite  virt-who
satellite-6/playbooks/: satellite-standalone.yml
(+44 files in other folders)
